Impl. Multiple imputation by chained equations

--- a/6.2022/research.ipynb
+++ b/6.2022/research.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,31 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Initiate values: 100%|██████████| 55/55 [03:31<00:00,  3.85s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initiator avg. score: 1.7886967598531844\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Collect remapper: 100%|██████████| 80/80 [06:30<00:00,  4.88s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Kaggle 1.41\n",
     "# predicted = aux.ImputeHelper(\n",
@@ -141,16 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +133,106 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TRY THIS\n",
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.mice, 'all', estimator=SGDRegressor(random_state=7, max_iter=1000), epochs=5, autosplit=False),\n",
+    ").run(aux.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 / 5: 100%|██████████| 55/55 [05:38<00:00,  6.15s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 avg. score: 1.3714165062858503\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2 / 5: 100%|██████████| 55/55 [05:51<00:00,  6.39s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2 avg. score: 1.359751425894781\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3 / 5: 100%|██████████| 55/55 [06:21<00:00,  6.93s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3 avg. score: 1.3555604176610678\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4 / 5: 100%|██████████| 55/55 [07:06<00:00,  7.75s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4 avg. score: 1.354903678820146\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5 / 5: 100%|██████████| 55/55 [06:16<00:00,  6.84s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5 avg. score: 1.354281487980924\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TRY THIS\n",
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.mice, 'all', estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=25, num_leaves=13), epochs=5, seed=7, autosplit=False),\n",
+    ").run(aux.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predicted = aux.ImputeHelper(\n",
+    "#     aux.Step(aux.cosine_stats, aux.subcol[1] + aux.subcol[2], threshold=0.7, backend='loky', chunksize=50, subsample=.0001),\n",
+    "# ).run(aux.data)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -214,27 +282,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0-F_1_14</td>\n",
-       "      <td>0.003307</td>\n",
+       "      <td>-0.004600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0-F_3_23</td>\n",
-       "      <td>-0.010349</td>\n",
+       "      <td>0.001471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1-F_3_24</td>\n",
-       "      <td>0.021233</td>\n",
+       "      <td>0.004571</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2-F_1_2</td>\n",
-       "      <td>-0.016865</td>\n",
+       "      <td>0.003069</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2-F_4_2</td>\n",
-       "      <td>-0.055259</td>\n",
+       "      <td>0.211759</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -242,14 +310,14 @@
       ],
       "text/plain": [
        "    row-col     value\n",
-       "0  0-F_1_14  0.003307\n",
-       "1  0-F_3_23 -0.010349\n",
-       "2  1-F_3_24  0.021233\n",
-       "3   2-F_1_2 -0.016865\n",
-       "4   2-F_4_2 -0.055259"
+       "0  0-F_1_14 -0.004600\n",
+       "1  0-F_3_23  0.001471\n",
+       "2  1-F_3_24  0.004571\n",
+       "3   2-F_1_2  0.003069\n",
+       "4   2-F_4_2  0.211759"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
