Impl. validator; move submission to a sep notebook

--- a/6.2022/research.ipynb
+++ b/6.2022/research.ipynb
@@ -13,56 +13,10 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.impute import SimpleImputer\n",
     "from lightgbm import LGBMRegressor\n",
-    "from sklearn.linear_model import SGDRegressor"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## best approach"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15/15 [23:55<00:00, 95.71s/it] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "ML Imputer avg. score: 0.5946655547740444\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 40/40 [00:00<00:00, 41.11it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SimpleStat avg. score: 0.9655820744615067\n"
-     ]
-    }
-   ],
-   "source": [
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    "    aux.Step(aux.simplestat, aux.subcol[1] + aux.subcol[3], imputer=SimpleImputer(strategy='mean')),\n",
-    ").run(aux.data)"
+    "from sklearn.linear_model import SGDRegressor\n",
+    "\n",
+    "\n",
+    "valid_true, valid = aux.train_valid_split(aux.data, frac=0.0125, seed=19)"
    ]
   },
   {
@@ -74,47 +28,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Collect remapper: 100%|██████████| 80/80 [00:02<00:00, 39.02it/s]\n"
+      "100%|██████████| 15/15 [00:05<00:00,  2.57it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ML Imputer avg. score: 1.8512329926302613\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 55/55 [00:00<00:00, 403.41it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 1.20748441637958\n",
+      "Overall final score: 0.15525455267720448\n"
      ]
     }
    ],
    "source": [
-    "# Kaggle 1.41\n",
-    "# predicted = aux.ImputeHelper(\n",
-    "#     aux.Step(aux.mean_matching, 'all', N=50000, init=SimpleImputer(), autosplit=False, backend='threading'),\n",
-    "# ).run(aux.data)"
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1, num_leaves=29)),\n",
+    "    aux.Step(aux.simplestat, aux.subcol[1] + aux.subcol[3], imputer=SimpleImputer(strategy='mean')),\n",
+    ").run(valid, validate_on=valid_true)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 55/55 [00:00<00:00, 408.75it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 1.2221578718548276\n",
+      "Overall final score: 0.15871013212957305\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.simplestat, 'all', imputer=SimpleImputer(strategy='mean')),\n",
+    ").run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TRY THIS with different N: 500 / 5000 / 25000\n",
+    "# predicted = aux.ImputeHelper(\n",
+    "#     aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
+    "#     aux.Step(aux.mice, aux.subcol[1] + aux.subcol[3], estimator=SGDRegressor(random_state=7, max_iter=1000), epochs=20, autosplit=False),\n",
+    "# ).run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## subset 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### predictor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [07:38<00:00, 30.59s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ML Imputer avg. score: 0.555457052036343\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [00:00<00:00, 442.47it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 0.6478440895126653\n",
+      "Overall final score: 0.06034473821069435\n"
+     ]
+    }
+   ],
+   "source": [
     "predicted = aux.ImputeHelper(\n",
     "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    "    aux.Step(aux.mean_matching, aux.subcol[1] + aux.subcol[3], N=5000, init=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=5, num_leaves=23), backend='threading'),\n",
-    ").run(aux.data)"
+    ").run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### statistics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [00:00<00:00, 422.02it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 1.9085581040001287\n",
+      "Overall final score: 0.1824617746726912\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kaggle 1.41\n",
-    "# predicted = aux.ImputeHelper(\n",
-    "#     aux.Step(aux.mean_matching, 'all', N=5000, init=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=5, num_leaves=7), backend='threading'),\n",
-    "# ).run(aux.data)"
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.simplestat, aux.subcol[4], imputer=SimpleImputer()),\n",
+    ").run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### mean matching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Initiate values: 100%|██████████| 15/15 [00:06<00:00,  2.38it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initiator avg. score: 1.7297704405768621\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Collect remapper: 100%|██████████| 15/15 [00:00<00:00, 557.33it/s]\n",
+      "100%|██████████| 15/15 [00:00<00:00, 397.15it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 1.9107521843225386\n",
+      "Overall final score: 0.1827374542731559\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.mean_matching, aux.subcol[4], N=2500, init=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=5, num_leaves=13), backend='threading'),\n",
+    ").run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MICE"
    ]
   },
   {
@@ -123,9 +267,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.mean_matching, 'all', N=5000, init=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=5, num_leaves=7), backend='threading', autosplit=False),\n",
-    ").run(aux.data)"
+    "# predicted = aux.ImputeHelper(\n",
+    "#     aux.Step(aux.mice, aux.subcol[4], estimator=SGDRegressor(random_state=7, max_iter=1000), epochs=10, autosplit=False),\n",
+    "# ).run(valid, validate_on=valid_true)"
    ]
   },
   {
@@ -134,93 +278,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TRY THIS\n",
     "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.mice, 'all', estimator=SGDRegressor(random_state=7, max_iter=1000), epochs=5, autosplit=False),\n",
-    ").run(aux.data)"
+    "    aux.Step(aux.mice, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=25, num_leaves=29), epochs=5, autosplit=False),\n",
+    ").run(valid, validate_on=valid_true)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1 / 5: 100%|██████████| 55/55 [05:38<00:00,  6.15s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1 avg. score: 1.3714165062858503\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2 / 5: 100%|██████████| 55/55 [05:51<00:00,  6.39s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2 avg. score: 1.359751425894781\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3 / 5: 100%|██████████| 55/55 [06:21<00:00,  6.93s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3 avg. score: 1.3555604176610678\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4 / 5: 100%|██████████| 55/55 [07:06<00:00,  7.75s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4 avg. score: 1.354903678820146\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5 / 5: 100%|██████████| 55/55 [06:16<00:00,  6.84s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5 avg. score: 1.354281487980924\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# TRY THIS\n",
     "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.mice, 'all', estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=25, num_leaves=13), epochs=5, seed=7, autosplit=False),\n",
-    ").run(aux.data)"
+    "    aux.Step(aux.mice, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=25, num_leaves=29), epochs=20, autosplit=False),\n",
+    ").run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.mice, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=500, num_leaves=29), epochs=20, autosplit=False),\n",
+    ").run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## temp"
    ]
   },
   {
@@ -231,99 +327,7 @@
    "source": [
     "# predicted = aux.ImputeHelper(\n",
     "#     aux.Step(aux.cosine_stats, aux.subcol[1] + aux.subcol[2], threshold=0.7, backend='loky', chunksize=50, subsample=.0001),\n",
-    "# ).run(aux.data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## submission"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Still contain NaN: False\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>row-col</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0-F_1_14</td>\n",
-       "      <td>-0.004600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0-F_3_23</td>\n",
-       "      <td>0.001471</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1-F_3_24</td>\n",
-       "      <td>0.004571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2-F_1_2</td>\n",
-       "      <td>0.003069</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2-F_4_2</td>\n",
-       "      <td>0.211759</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    row-col     value\n",
-       "0  0-F_1_14 -0.004600\n",
-       "1  0-F_3_23  0.001471\n",
-       "2  1-F_3_24  0.004571\n",
-       "3   2-F_1_2  0.003069\n",
-       "4   2-F_4_2  0.211759"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aux.save_submission(predicted)"
+    "# ).run(valid, validate_on=valid_true)"
    ]
   },
   {
