--- a/6.2022/research.ipynb
+++ b/6.2022/research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from lightgbm import LGBMRegressor\n",
     "from sklearn.linear_model import SGDRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from lightgbm import LGBMRegressor\n",
     "\n",
     "\n",
     "valid_true, valid = aux.train_valid_split(aux.data, frac=0.0125, seed=19)"
@@ -28,29 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:05<00:00,  2.57it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "ML Imputer avg. score: 1.8512329926302613\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 55/55 [00:00<00:00, 403.41it/s]\n"
+      "100%|██████████| 15/15 [00:06<00:00,  2.48it/s, avg. score=1.85]\n",
+      "Final validation: 100%|██████████| 55/55 [00:00<00:00, 395.40it/s]\n"
      ]
     },
     {
@@ -71,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 55/55 [00:00<00:00, 408.75it/s]\n"
+      "Final validation: 100%|██████████| 55/55 [00:00<00:00, 431.70it/s]\n"
      ]
     },
     {
@@ -107,210 +97,6 @@
     "#     aux.Step(aux.mice, aux.subcol[1] + aux.subcol[3], estimator=SGDRegressor(random_state=7, max_iter=1000), epochs=20, autosplit=False),\n",
     "# ).run(valid, validate_on=valid_true)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## subset 4"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### predictor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15/15 [07:38<00:00, 30.59s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "ML Imputer avg. score: 0.555457052036343\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 442.47it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final validation score: 0.6478440895126653\n",
-      "Overall final score: 0.06034473821069435\n"
-     ]
-    }
-   ],
-   "source": [
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    ").run(valid, validate_on=valid_true)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### statistics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 422.02it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final validation score: 1.9085581040001287\n",
-      "Overall final score: 0.1824617746726912\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.simplestat, aux.subcol[4], imputer=SimpleImputer()),\n",
-    ").run(valid, validate_on=valid_true)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### mean matching"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Initiate values: 100%|██████████| 15/15 [00:06<00:00,  2.38it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initiator avg. score: 1.7297704405768621\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Collect remapper: 100%|██████████| 15/15 [00:00<00:00, 557.33it/s]\n",
-      "100%|██████████| 15/15 [00:00<00:00, 397.15it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final validation score: 1.9107521843225386\n",
-      "Overall final score: 0.1827374542731559\n"
-     ]
-    }
-   ],
-   "source": [
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.mean_matching, aux.subcol[4], N=2500, init=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=5, num_leaves=13), backend='threading'),\n",
-    ").run(valid, validate_on=valid_true)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### MICE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# predicted = aux.ImputeHelper(\n",
-    "#     aux.Step(aux.mice, aux.subcol[4], estimator=SGDRegressor(random_state=7, max_iter=1000), epochs=10, autosplit=False),\n",
-    "# ).run(valid, validate_on=valid_true)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.mice, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=25, num_leaves=29), epochs=5, autosplit=False),\n",
-    ").run(valid, validate_on=valid_true)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.mice, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=25, num_leaves=29), epochs=20, autosplit=False),\n",
-    ").run(valid, validate_on=valid_true)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.mice, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=500, num_leaves=29), epochs=20, autosplit=False),\n",
-    ").run(valid, validate_on=valid_true)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
